removing jumping text in nav and bug fixing the aside on blog.html

--- a/Css/blog.css
+++ b/Css/blog.css
@@ -78,12 +78,6 @@ summary {
     justify-content: center;
 }
 
-
-aside{
-    text-decoration: none;
-    color: white;
-}
-
 details a{
     padding: 1vw;
 }
